--- a/task_manager/templates/index.html
+++ b/task_manager/templates/index.html
@@ -1,1 +1,46 @@
-<h1>Hello, {{ text }}!</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    </head>
+    <body class="d-flex flex-column min-vh-100">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="">Менджер задач</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                <a class="nav-link" href="#">Пользователи</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">Вход</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="{% url 'register' %}">Регистрация</a>
+                </li>
+            </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="card text-bg-light mb-3" style="max-width: 18rem;">
+      <div class="card-header">Привет от Хекслета!</div>
+      <div class="card-body">
+        <h5 class="card-title">Light Заголовок карточки</h5>
+        <p class="card-text">Несколько быстрых примеров текста для построения на основе Заголовок карточки и составления основной части содержимого карточки.</p>
+      </div>
+    </div>
+    {% block login %}{% endblock %}
+    {% block register %}{% endblock %}
+    <footer class="footer mt-auto py-3 bg-light">
+      <div class="container">
+        <a class="navbar-link" href="https://ru.hexlet.io/">Hexlet</a>
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  </body>
+</html>
