--- a/task_manager/templates/register.html
+++ b/task_manager/templates/register.html
@@ -1,7 +1,7 @@
 {% extends 'index.html' %}
 {% load django_bootstrap5 %}
 
-{% block register %}
+{% block register_user %}
 <div class="container-lg">
     <h1>Регистрация</h1>
 
