--- a/task_manager/templates/delete.html
+++ b/task_manager/templates/delete.html
@@ -1,14 +1,14 @@
 {% extends 'index.html' %}
 {% load django_bootstrap5 %}
 
-{% block login_user %}
+{% block delete_user %}
 <div class="container-lg">
-    <h1>Вход</h1>
+    <h1>Удаление записи</h1>
 
     <form method="post">
         {% csrf_token %}
         {% bootstrap_form form %}
-        <button type="submit" class="btn btn-primary">Войти</button>
+        <button type="submit" class="btn btn-primary">Подтвердить</button>
     </form>
 </div>
 {% endblock %}
