--- a/task_manager/templates/users.html
+++ b/task_manager/templates/users.html
@@ -1,7 +1,7 @@
 {% extends 'index.html' %}
 {% load django_bootstrap5 %}
 
-{% block user %}
+{% block list_user %}
 <div class="container-lg">
     <h1>Пользователи</h1>
     <table class="table table-striped table-borderless">
@@ -19,13 +19,13 @@
         {% for user in users %}
             <tr>
                 <td>{{ user.id }}</td>
-                <td>{{ user.name }}</td>
                 <td>{{ user.user_name }}</td>
-                <td>{{ user.create_date }}</td>
+                <td>{{ user.first_name }}</td>
+                <td>{{ user.time_create }}</td>
                 <td>
-                    <a href="#">Изменить</h5>
+                    <a href="{% url 'update_user' user.pk %}">Изменить</a>
                     <hr>
-                    <a href="#">Удалить</h5>
+                    <a href="{% url 'delete_user' user.pk %}">Удалить</h5>
                 </td>
             </tr>
         {% endfor %}
